@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 2.5.1 update 1
 ----------------------------------------------------------------------
-   1 Enhancement
+   2 Enhancements
    0 Bug fix
    0 Localisation updates
 ----------------------------------------------------------------------
@@ -11,6 +11,9 @@
 
   - Console: more context on error message "Failed to load..."
   http://sourceforge.net/support/tracker.php?aid=3465220
+
+  - Navigate to next/previous segment with a note
+  http://sourceforge.net/support/tracker.php?aid=3484729
 
 ----------------------------------------------------------------------
  OmegaT 2.5.1
